# StarArkEngine

./: .gitignore  CMakeLists.txt  Plan.md  README.md  build_log2.txt  cmake_log2.txt
assets/: icosahedron.mtl
docs/: API.md  Capabilities.md  DevLog.md  KnownIssues.md  ModSpec.md  Roadmap.md
engine/: CMakeLists.txt
engine/core/: AComponent.h  AObject.cpp  AObject.h  AScene.cpp  AScene.h  EngineBase.cpp  EngineBase.h  Guid.cpp  Guid.h  IObjectOwner.h  PersistentId.cpp  PersistentId.h  SceneManager.cpp  SceneManager.h  SchemaHash.cpp  SchemaHash.h  Transform.cpp  Transform.h  TypeInfo.cpp  TypeInfo.h
engine/debug/: ConsoleDebugListener.cpp  ConsoleDebugListener.h  DebugListenBus.cpp  DebugListenBus.h  FileDebugListener.cpp  FileDebugListener.h  IDebugListener.h
engine/mod/: ModInfo.cpp  ModInfo.h
engine/platform/: Input.cpp  Input.h  Paths.cpp  Paths.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/rendering/: Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  DrawListBuilder.cpp  DrawListBuilder.h  ForwardRenderer.cpp  ForwardRenderer.h  IBL.cpp  IBL.h  Light.cpp  Light.h  LoadingScreen.cpp  LoadingScreen.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ModelLoader.cpp  ModelLoader.h  OrbitCamera.cpp  OrbitCamera.h  PostProcess.cpp  PostProcess.h  RenderSettings.h  SceneSerializer.cpp  SceneSerializer.h  ShaderManager.cpp  ShaderManager.h  ShaderSources.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  TextureLoader.cpp  TextureLoader.h
engine/rhi/: RHIBuffer.h  RHICommandBuffer.h  RHIDevice.h  RHIPipeline.h  RHIRenderTarget.h  RHIShader.h  RHITexture.h  RHITypes.h
engine/rhi/opengl/: GLBuffer.cpp  GLBuffer.h  GLCommandBuffer.cpp  GLCommandBuffer.h  GLDevice.cpp  GLDevice.h  GLPipeline.cpp  GLPipeline.h  GLRenderTarget.cpp  GLRenderTarget.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
engine/save/: SaveHeader.cpp  SaveHeader.h
engine/scripting/: ScriptHost.cpp  ScriptHost.h
engine/serialization/: SceneDoc.cpp  SceneDoc.h  TomlDoc.cpp  TomlDoc.h
engine/shaders/: depth.frag  depth.vert  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  pbr.frag  pbr.vert  phong.frag  phong.vert
engine/util/: Sha256.cpp  Sha256.h
game/: CMakeLists.txt  game.config.json  main.cpp
game/components/: Orbiter.h  Rotator.h
game/content/: README.md
game/objects/: CameraObject.h  GroundObject.h  LightObjects.h  ModelObject.h  PBRSphere.h
game/scenes/: DemoScene.cpp  FBXDemoScene.cpp
game/src/: main.cpp
samples/: CMakeLists.txt
samples/content/scenes/: cottage.toml
samples/mods/: load_order.toml
samples/mods-src/hellomod/: HelloMod.cs  HelloMod.csproj
samples/mods/bistro/: mod.toml
samples/mods/hellomod/: mod.toml  scene.overlay.toml
samples/mods/testmod/: mod.toml
samples/mods/vanilla/: mod.toml
samples/mods/vanilla/scenes/: main.toml
samples/src/: main_samples.cpp
samples/src/components/: FlyCameraController.h  FrameLogger.h
samples/src/objects/: CameraObject.h  GroundObject.h  LightObjects.h  ModelObject.h  PBRSphere.h
samples/src/scenes/: CottageScene.cpp  CottageScene.h  DemoScene.cpp  DemoScene.h  FBXDemoScene.cpp  FBXDemoScene.h
samples/src/utils/: TextureUtils.h
scripts/StarArk.Scripting/: Bridge.cs  Engine.cs  IMod.cs  StarArk.Scripting.csproj
tools/: README.md
tools/Launcher/: App.xaml  App.xaml.cs  AssemblyInfo.cs  Launcher.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest  launcher.config.sample.json
tools/Launcher/Models/: LauncherConfig.cs  ModInfo.cs
tools/Launcher/Services/: LaunchService.cs  ModScanner.cs  Validator.cs
tools/Launcher/Themes/: Dark.xaml
tools/Launcher/ViewModels/: MainViewModel.cs
tools/LightingTuner/: App.xaml  App.xaml.cs  LightingTuner.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md
